@@ -14,7 +14,7 @@
 	"VoidUI_assault_12" : "Bain is Civilian",
 	"VoidUI_assault_13" : "The Dark Souls of heist games",
 	"VoidUI_assault_14" : "Do not try this in real life",
-	"VoidUI_assault_15" : "Dallas is downed!",
+	"VoidUI_assault_15" : "If you see this, post it on Reddit",
 	"VoidUI_assault_16" : "You cheated by using invalid weapon or weapon mod",
 	"VoidUI_assault_17" : "Local streamer becomes funny easter egg line",
 	"VoidUI_assault_18" : "WE GOTTA GET HOXTON BACK",
@@ -25,7 +25,7 @@
 	"VoidUI_assault_23" : "Do they not have coloured printers in Russia?",
 	"VoidUI_assault_24" : "Thermal Drill: The PAYDAY 2 Card Game",
 	"VoidUI_assault_25" : "Shoot and Scoot!",
-	"VoidUI_assault_26" : "Piloce Ass salt in Congress",
+	"VoidUI_assault_26" : "Kneel before the Assault Banner!",
 	
 	"VoidUI_options_title" : "Void UI",
 	"VoidUI_options_desc" : "Permet de modifier le comportement de Void UI",  
@@ -36,13 +36,13 @@
 	"VoidUI_outlines_title" : "Contours colorisés pour les convertis",
 	"VoidUI_outlines_desc" : "Permet de coloriser les contours des policiers convertis en fonction de leur propriétaire",
 	"VoidUI_assault_lines_title" : "Alertes d'assauts",
-	"VoidUI_assault_lines_desc" : "Réintroduit l'avertissement de Bain (vocal) lorsqu'un assaut va commencer. \nStandard: Avertissement 30 secondes avant. Verbrose: Avertissement 30, 20 et 10 secondes avant l'assaut.",
+	"VoidUI_assault_lines_desc" : "Add back bain responses warning of the next imminent assault. \nLight: 30 second warning. Standard: 30, 20, and 10 second warning, like PDTH.",
 	"VoidUI_reset_title" : "Réinitialliser les options",
 	"VoidUI_reset_desc" : "Restaure toutes les options par défaut",
 	"VoidUI_reset_confirm" : "Êtes-vous sûr de vouloir réinitialliser les options et restaurer celles par défaut? Cette action est irréversible.",
 	"VoidUI_warning_title" : "Options changées",
 	"VoidUI_warning_desc" : "Certains changement ne prendront pas effet avant le prochain braquage",
-	"VoidUI_warning_confirm" : "Ne plus afficher",
+	"VoidUI_warning_confirm" : "Dont warn again",
 	
 	"VoidUI_hudteammate_title" : "Panneaux du joueur et des coéquipiers",
 	"VoidUI_hudteammate_desc" : "Comprend les options en rapport avec les panneaux du joueur et ses coéquipiers (barre de vie, munitions, etc.)",
@@ -81,6 +81,9 @@
 	"VoidUI_mate_name_desc" : "Montre le rang et le niveau de vos coéquipiers avant leur noms (au dessus de leur panneau)",
 	"VoidUI_mate_interact_title" : "Temps d'interaction",  	    
 	"VoidUI_mate_interact_desc" : "Montre le temps restant d'interact",
+	"VoidUI_fire_auto" : "Auto",
+	"VoidUI_fire_semi" : "Semi",
+	"VoidUI_fire_burst" : "Burst",
 	
 	"VoidUI_objectives_title" : "Temps et Objectifs",
 	"VoidUI_objectives_desc" : "Options relatives au panneau de temps et au panneau d'objectif",
@@ -237,6 +240,7 @@
 	"VoidUI_perk" : "Pioche",
 	"VoidUI_playtime" : "Temps de jeu",
 	"VoidUI_ping" : "Ping",
+	"VoidUI_nosong" : "NOTHING",
 	
 	"VoidUI_presenter_title" : "Notifications et astuces",
 	"VoidUI_presenter_desc" : "Options relatives aux notifications et astuces du HUD",
@@ -258,10 +262,16 @@
 	"VoidUI_hint_anim_desc" : "Met en valeur les astuces avec une animation légère de saut",
 	"VoidUI_hint_color_title" : "Astuces colorées",
 	"VoidUI_hint_color_desc" : "Colore les noms des coéquipiers en astuces",
+	"VoidUI_vape_hints_title" : "Tag Team notifications",
+	"VoidUI_vape_hints_desc" : "Display a hint notification when tagging somebody/being tagged by the Tag Team perk-deck. Also adds a few seconds long outline",
 	"VoidUI_challanges_panel" : "Notifications (challenges)",
 	"VoidUI_enable_challanges_title" : "Activer les notifications",
 	"VoidUI_enable_challanges_desc" : "Active les notifications lorsqu'un challenge est complété",
 	"VoidUI_hint_challanges_desc" : "Permet de définir la taille du panneau de notification de challenge",
+	
+	"VoidUI_tag_team_owner" : "You tagged $NAME",
+	"VoidUI_tag_team_owner_joker" : "You tagged $NAME's Convert",
+	"VoidUI_tag_team_tagged" : "$NAME tagged you",
 	
 	"VoidUI_subtitles_title" : "Sous-titres",
 	"VoidUI_subtitles_desc" : "Options relatives aux sous-titres",
@@ -271,6 +281,33 @@
 	"VoidUI_subtitle_scale_desc" : "Permet de définir la taille des sous-titres",
 	"VoidUI_subtitles_bg_title" : "Style de l'arrière-plan",
 	"VoidUI_subtitles_bg_desc" : "Permet de définir quelle sorte d'arrière-plan les sous-titres ont",
+
+	"VoidUI_blackscreen_title" : "Heist Intro and Loading Screen",
+	"VoidUI_blackscreen_desc" : "Options related to the heist intro (blackscreen) and loading screens",
+	"VoidUI_blackscreen" : "Heist Intro",
+	"VoidUI_enable_blackscreen_title" : "Enable Heist intro",
+	"VoidUI_enable_blackscreen_desc" : "Enable the Void UI heist intro (blackscreen)",
+	"VoidUI_blackscreen_map_title" : "Show current day",
+	"VoidUI_blackscreen_map_desc" : "Show the current day of the heist",
+	"VoidUI_blackscreen_risk_title" : "Show difficulty name",
+	"VoidUI_blackscreen_risk_desc" : "Show the name of the difficulty you're playing on",
+	"VoidUI_blackscreen_skull_title" : "Show difficulty skulls",
+	"VoidUI_blackscreen_skull_desc" : "Show skull icons based on the difficulty you're playing on",
+	"VoidUI_blackscreen_linger_title" : "Fade from Heist intro",
+	"VoidUI_blackscreen_linger_desc" : "Fade from the heist intro to your game",
+	"VoidUI_blackscreen_time_title" : "Skip intro time",
+	"VoidUI_blackscreen_time_desc" : "Determine how long you have to hold the skip button for",
+	"VoidUI_skip_blackscreen"	:	"Press $BTN_ACCEPT to skip",
+	"VoidUI_loading_others"		:	"And $PLAYERS others",
+	"VoidUI_loading" : "Loading Screens",
+	"VoidUI_enable_loadingscreen_title" : "Enable Loading screens",
+	"VoidUI_enable_loadingscreen_desc" : "Enable the Void UI loading screens",
+	"VoidUI_loading_heistinfo_title" : "Heist information",
+	"VoidUI_loading_heistinfo_desc" : "Show information about the heist like its name, contractor, difficulty",
+	"VoidUI_loading_players_title" : "Connected players",
+	"VoidUI_loading_players_desc" : "Show the name of the players you are connected with",
+	"VoidUI_loading_briefing_title" : "Heist briefing",
+	"VoidUI_loading_briefing_desc" : "Show the contractor's briefing for the heist",
 	
 	"VoidUI_disabled" : "Cacher",
 	"VoidUI_ecm_first" : "Premier placé",
