@@ -1,6 +1,6 @@
 {
 	"VoidUI_endless_assault" : "Бесконечный полицейский штурм",
-	"VoidUI_assault_1" : "Требуется больше кроссоверов",
+	"VoidUI_assault_1" : "Yeah, Fo fucking Sho",
 	"VoidUI_assault_2" : "Ха-ха, твоя зарплата в опасности",
 	"VoidUI_assault_3" : "Съешьте капитана, чтобы закончить жопу",
 	"VoidUI_assault_4" : ":Неловко:",
@@ -14,7 +14,7 @@
 	"VoidUI_assault_12" : "Бэйн - гражданский",
 	"VoidUI_assault_13" : "Темные души игр о кражах",
 	"VoidUI_assault_14" : "Не делайте это в реальной жизни",
-	"VoidUI_assault_15" : "Далласа положили!",
+	"VoidUI_assault_15" : "If you see this, post it on Reddit",
 	"VoidUI_assault_16" : "Вы обманываете используя оружие или скин котрого у вас нет",
 	"VoidUI_assault_17" : "Местный стример становится смешным пасхальным яйцом",
 	"VoidUI_assault_18" : "МЫ ПОЛУЧИЛИ ХОКСТОНА НАЗАД",
@@ -25,7 +25,7 @@
 	"VoidUI_assault_23" : "У них в России нет цветных принтеров?",
 	"VoidUI_assault_24" : "Термобур: Карточная игра PAYDAY 2",
 	"VoidUI_assault_25" : "Стрелять и прогвигаться !",
-	"VoidUI_assault_26" : "Идет полицейский штурм",
+	"VoidUI_assault_26" : "Kneel before the Assault Banner!",
 	
 	"VoidUI_options_title" : "Void UI",
 	"VoidUI_options_desc" : "Параметры Void UI",  
@@ -36,13 +36,13 @@
 	"VoidUI_outlines_title" : "Цветные контуры конвертов",
 	"VoidUI_outlines_desc" : "Сделать контуры переведенных на вашу сторону копов, того же цвета что у их владельца",
 	"VoidUI_assault_lines_title" : "Предупреждения",
-	"VoidUI_assault_lines_desc" : "Включить предупреждения Бейна о начале штурма. Стандарт: Предупреждение за 30 секунд. Подробно: Предупреждение за 30, 20 и 10 секунд.",
+	"VoidUI_assault_lines_desc" : "Add back bain responses warning of the next imminent assault. \nLight: 30 second warning. Standard: 30, 20, and 10 second warning, like PDTH.",
 	"VoidUI_reset_title" : "Сбросить настройки",
 	"VoidUI_reset_desc" : "Сбрость все параметры до значений по умолчанию",
 	"VoidUI_reset_confirm" : "Вы действительно хотите сбросить настройки Void UI ? Это не может быть отменено.",
 	"VoidUI_warning_title" : "Настройки изменены",
 	"VoidUI_warning_desc" : "Некоторые настройки могут не вступить в силу до следующего перезапуска миссии",
-	"VoidUI_warning_confirm" : "Больше не показывать",
+	"VoidUI_warning_confirm" : "Dont warn again",
 	
 	"VoidUI_hudteammate_title" : "Панели игрока и команды",
 	"VoidUI_hudteammate_desc" : "Параметры, связанные с панелями игрока и команды",
@@ -81,6 +81,9 @@
 	"VoidUI_mate_name_desc" : "Показывать ранги игроков на панели",
 	"VoidUI_mate_interact_title" : "Время взаимодействия",  	    
 	"VoidUI_mate_interact_desc" : "Показывать время взаимодействия ваших товарищей по команде",
+	"VoidUI_fire_auto" : "Auto",
+	"VoidUI_fire_semi" : "Semi",
+	"VoidUI_fire_burst" : "Burst",
 	
 	"VoidUI_objectives_title" : "Таймер и задания",
 	"VoidUI_objectives_desc" : "Параметры, связанные с панелями таймера и заданий",
@@ -237,6 +240,7 @@
 	"VoidUI_perk" : "Перк",
 	"VoidUI_playtime" : "Игр.время",
 	"VoidUI_ping" : "Пинг",
+	"VoidUI_nosong" : "NOTHING",
 	
 	"VoidUI_presenter_title" : "Уведомления и подсказки",
 	"VoidUI_presenter_desc" : "Параметры, связанные с уведомлениями и подсказками",
@@ -258,10 +262,16 @@
 	"VoidUI_hint_anim_desc" : "Анимировать подсказки эффектом выпрыгивания",
 	"VoidUI_hint_color_title" : "Цветные имена в подсказках",
 	"VoidUI_hint_color_desc" : "Показывать цветные имена ваших товарищей по команде в подсказках",
+	"VoidUI_vape_hints_title" : "Tag Team notifications",
+	"VoidUI_vape_hints_desc" : "Display a hint notification when tagging somebody/being tagged by the Tag Team perk-deck. Also adds a few seconds long outline",
 	"VoidUI_challanges_panel" : "Панель испытаний",
 	"VoidUI_enable_challanges_title" : "Включить уведомления о испытаниях",
 	"VoidUI_enable_challanges_desc" : "Показывать Void UI уведомления о выполненных испытаниях",
 	"VoidUI_hint_challanges_desc" : "Установите размер панели испытаний",
+
+	"VoidUI_tag_team_owner" : "You tagged $NAME",
+	"VoidUI_tag_team_owner_joker" : "You tagged $NAME's Convert",
+	"VoidUI_tag_team_tagged" : "$NAME tagged you",
 	
 	"VoidUI_subtitles_title" : "Субтитры",
 	"VoidUI_subtitles_desc" : "Параметрысвязанные с субтитрами",
@@ -271,6 +281,33 @@
 	"VoidUI_subtitle_scale_desc" : "Установите размер субтитров",
 	"VoidUI_subtitles_bg_title" : "Стиль заднего фона",
 	"VoidUI_subtitles_bg_desc" : "Выберите стиль заднего фона субтитров",
+	
+	"VoidUI_blackscreen_title" : "Heist Intro and Loading Screen",
+	"VoidUI_blackscreen_desc" : "Options related to the heist intro (blackscreen) and loading screens",
+	"VoidUI_blackscreen" : "Heist Intro",
+	"VoidUI_enable_blackscreen_title" : "Enable Heist intro",
+	"VoidUI_enable_blackscreen_desc" : "Enable the Void UI heist intro (blackscreen)",
+	"VoidUI_blackscreen_map_title" : "Show current day",
+	"VoidUI_blackscreen_map_desc" : "Show the current day of the heist",
+	"VoidUI_blackscreen_risk_title" : "Show difficulty name",
+	"VoidUI_blackscreen_risk_desc" : "Show the name of the difficulty you're playing on",
+	"VoidUI_blackscreen_skull_title" : "Show difficulty skulls",
+	"VoidUI_blackscreen_skull_desc" : "Show skull icons based on the difficulty you're playing on",
+	"VoidUI_blackscreen_linger_title" : "Fade from Heist intro",
+	"VoidUI_blackscreen_linger_desc" : "Fade from the heist intro to your game",
+	"VoidUI_blackscreen_time_title" : "Skip intro time",
+	"VoidUI_blackscreen_time_desc" : "Determine how long you have to hold the skip button for",
+	"VoidUI_skip_blackscreen"	:	"Press $BTN_ACCEPT to skip",
+	"VoidUI_loading_others"		:	"And $PLAYERS others",
+	"VoidUI_loading" : "Loading Screens",
+	"VoidUI_enable_loadingscreen_title" : "Enable Loading screens",
+	"VoidUI_enable_loadingscreen_desc" : "Enable the Void UI loading screens",
+	"VoidUI_loading_heistinfo_title" : "Heist information",
+	"VoidUI_loading_heistinfo_desc" : "Show information about the heist like its name, contractor, difficulty",
+	"VoidUI_loading_players_title" : "Connected players",
+	"VoidUI_loading_players_desc" : "Show the name of the players you are connected with",
+	"VoidUI_loading_briefing_title" : "Heist briefing",
+	"VoidUI_loading_briefing_desc" : "Show the contractor's briefing for the heist",
 	
 	"VoidUI_disabled" : "Скрыть",
 	"VoidUI_ecm_first" : "Первый",
