@@ -6,6 +6,7 @@ Version 1.1.2
 - Added loading screens
 - Made hint notifications color bot names as well
 - Modified the blackscreen and added options for it
+- Updated the teammate carry text to support cyrillic characters
 - Fixed damage reduction bars sometimes not being updated correctly
 - Fixed names on hint notifications not being colored if the player has a bracket in their name
 - Fixed the ability bar not showing the current amount when using the Tag Team perk-deck
